<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jboss.jbossts</groupId>
    <artifactId>txbridge-tests</artifactId>
    <version>4.16.4.Final</version>
    <packaging>jar</packaging>

    <properties>
        <version.jbossas>7.1.1.Final</version.jbossas>
        <version.jbossts>4.16.4.Final</version.jbossts>
        <version.arquillian.junit>1.0.0.Final</version.arquillian.junit>
        <version.junit>4.8.2</version.junit>
        <version.byteman>2.0.1</version.byteman>
        <version.apache.httpcomponents>4.1.2</version.apache.httpcomponents>

        <byteman.home>${project.build.directory}/byteman</byteman.home>
        <general.server.jvm.args>
            -Xms64m -Xmx512m -XX:MaxPermSize=256m
        </general.server.jvm.args>
        <byteman.server.jvm.args>
            -Dorg.jboss.byteman.debug=true -Dorg.jboss.byteman.verbose=true -Dorg.jboss.byteman.contrib.dtest.rmiregistry.port=1199
            -Djboss.modules.system.pkgs=org.jboss.byteman
            -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
        </byteman.server.jvm.args>
        <jpda.server.jvm.args></jpda.server.jvm.args>
    </properties>

    <dependencies>
       <dependency>
            <groupId>org.jboss.jbossts</groupId>
            <artifactId>jbossxts-api</artifactId>
            <version>${version.jbossts}</version>
            <scope>test</scope>
       </dependency>

       <dependency>
            <groupId>org.jboss.jbossts</groupId>
            <artifactId>jbossjts</artifactId>
            <version>${version.jbossts}</version>
            <scope>test</scope>
       </dependency>

       <dependency>
            <groupId>org.jboss.jbossts</groupId>
            <artifactId>jbosstxbridge</artifactId>
            <version>${version.jbossts}</version>
            <scope>test</scope>
       </dependency>

       <dependency>
            <groupId>org.jboss.spec</groupId>
            <artifactId>jboss-javaee-6.0</artifactId>
            <version>1.0.0.Final</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <version>${version.arquillian.junit}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman</artifactId>
            <version>${version.byteman}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-dtest</artifactId>
            <version>${version.byteman}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${version.apache.httpcomponents}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>${version.apache.httpcomponents}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jboss-public-repository-group</id>
            <name>JBoss Public Repository Group</name>
            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>jboss-public-repository-group</id>
            <name>JBoss Public Repository Group</name>
            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>byteman.copy</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jboss.byteman</groupId>
                                    <artifactId>byteman</artifactId>
                                    <version>${version.byteman}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jboss.byteman</groupId>
                                    <artifactId>byteman-dtest</artifactId>
                                    <version>${version.byteman}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${byteman.home}</outputDirectory>
                            <stripVersion>true</stripVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Prevent test and server output appearing in console. -->
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <enableAssertions>true</enableAssertions>

                    <!-- Tests to execute. -->
                    <includes>
                        <include>**/*Tests.java</include>
                    </includes>

                    <!-- System properties passed to test cases -->
                    <systemPropertyVariables>
                        <!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
                        <server.jvm.args>${general.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
                        <java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
                    </systemPropertyVariables>

                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>arq-jbossas-managed-7</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
                    <version>${version.jbossas}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>jpda.profile</id>
            <activation>
                <property><name>jpda</name></property>
            </activation>
            <properties>
                <jpda.server.jvm.args>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jpda.server.jvm.args>
            </properties>
        </profile>
    </profiles>
</project>
